--- a/src/main/resources/assets/attributes/lang/en_us.lang
+++ b/src/main/resources/assets/attributes/lang/en_us.lang
@@ -1,11 +1,11 @@
 # FORMATS
 
 ## Traits
-skillable.unlock.attributes.damagebuff=Passive Damage
-skillable.unlock.attributes.damagebuff.desc=Grants a Passive Damage-Boost, Scales with Attack Level.
-skillable.unlock.attributes.resistancebuff=Passive Resistance
-skillable.unlock.attributes.resistancebuff.desc=Grants a Passive Resistance-Boost, Scales with Defense.
-skillable.unlock.attributes.miningbuff=Passive Mining-Speed
-skillable.unlock.attributes.miningbuff.desc=Grants a Passive Mining-Speed Boost, Scales with Mining.
-skillable.unlock.attributes.adaptation=Adaptation
-skillable.unlock.attributes.adaptation.desc=Absorb The Very Essence of Your Enemies With Each Attack!
+reskillable.unlock.attributes.damagebuff=Passive Damage
+reskillable.unlock.attributes.damagebuff.desc=Grants a Passive Damage-Boost, Scales with Attack Level.
+reskillable.unlock.attributes.resistancebuff=Passive Resistance
+reskillable.unlock.attributes.resistancebuff.desc=Grants a Passive Resistance-Boost, Scales with Defense.
+reskillable.unlock.attributes.miningbuff=Passive Mining-Speed
+reskillable.unlock.attributes.miningbuff.desc=Grants a Passive Mining-Speed Boost, Scales with Mining.
+reskillable.unlock.attributes.adaptation=Adaptation
+reskillable.unlock.attributes.adaptation.desc=Absorb The Very Essence of Your Enemies With Each Attack!
